Changelog
=========

0.5 - unreleased
----------------


0.4 - 2009-05-18
----------------

- Avoid a deprecation warning for Globals.InitializeClass. [hannosch]

0.3 - 2009-02-13
----------------

- Added ``_exec`` method to the file-system based skin template class, largely
  carried over from `Products.PageTemplates`. [malthe]

0.2 - 2008-12-17
----------------

- The ``func_code`` attribute of file-system page templates should simulate a
  function taking no arguments. [malthe]

0.1 - 2008-11-29
----------------

- Initial release. [malthe]